syntax = "proto3";

package service;

option go_package = "./pb";

service StreamManagement {
    rpc CreateSongPlaylist (Empty) returns (SongPlaylist) {};
    rpc CurrentSongPlaylist (Empty) returns (SongPlaylist) {};
    rpc UpdateSongPlaylist (SongPlaylist) returns (Empty) {};
    
    rpc OutputStatus (Empty) returns (OutputResponse) {};

    rpc Preview (SDP) returns (SDP) {};
    rpc StartTwitch (Empty) returns (Empty) {};
    
    rpc StartAudio (Empty) returns (AudioResponse) {};
    rpc StartOutput (Empty) returns (OutputResponse) {};

    rpc StopOutput (Empty) returns (Empty) {};
}

message Song {
    string name = 1;
    string page = 2;
    string author = 3;
    string audio = 4;
    string cover = 5;
    int32 bitrate = 6;
}

message SongPlaylist {
    repeated Song songs = 1;
}

message AudioResponse {
    bool ready = 1;
}

message OutputResponse {
    bool ready = 1;
}

message Empty {

}

message SDP {
    string sdp = 1;
}

// protoc --go_out=./api/ --go-grpc_out=./api/  proto/songs.proto